--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,6 @@
 
 org.gradle.parallel=true
 
+# For Spring Boot 2
+# https://github.com/spring-projects/spring-boot/issues/13444
+groovy.version=2.5.1
