--- a/settings.gradle
+++ b/settings.gradle
@@ -2,10 +2,9 @@ include "spock-bom"
 include "spock-core"
 include "spock-specs"
 include "spock-spring"
-include "spock-spring:spring2-test"
 include "spock-spring:spring3-test"
 include "spock-guice"
-include "spock-tapestry"
+// include "spock-tapestry"
 include "spock-unitils"
 include "spock-report"
 include "spock-gradle"
@@ -18,7 +17,6 @@ if (JavaVersion.current().java8Compatible) {
   include "spock-spring:boot2-test"
   include "spock-spring:spring5-test"
 }
-
 
 rootProject.name = "spock"
 nameBuildScriptsAfterProjectNames(rootProject.children)
