--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ description = "Spock Framework"
 
 ext {
   baseVersion = "1.2"
-  snapshotVersion = true
-  releaseCandidate = 0
+  snapshotVersion = false
+  releaseCandidate = 1
   variants = [2.4, 2.5]
   variant = System.getProperty("variant") as BigDecimal ?: variants.first()
   if (variant == 2.4) {
@@ -42,7 +42,7 @@ ext {
     groovyVersion = System.getProperty("groovyVersion")
   }
   fullVersion = baseVersion + ((!snapshotVersion && releaseCandidate) ? "-rc-$releaseCandidate" : "") + "-groovy-$variant" + (snapshotVersion ? "-SNAPSHOT" : '')
-    variantLessVersion = baseVersion + (snapshotVersion ? "-SNAPSHOT" : (releaseCandidate ? "-rc-$releaseCandidate" : ""))
+    variantLessVersion = baseVersion + (snapshotVersion ? "-SNAPSHOT" : (releaseCandidate ? "-RC$releaseCandidate" : ""))
   javaVersions = [1.7, 1.8]
   javaVersion = System.getProperty("java.specification.version") as BigDecimal
   libs = [
