--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ dist: precise # downgrade to avoid jdk7 SSL Bug https://github.com/docker-librar
 jdk:
   - oraclejdk7 # openjdk7 has SSL Bug avoid jdk7 SSL Bug https://github.com/docker-library/openjdk/issues/117
   - oraclejdk8
+  - openjdk10
 
 env:
   matrix:
