--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ jdk:
   - oraclejdk7 # openjdk7 has SSL Bug avoid jdk7 SSL Bug https://github.com/docker-library/openjdk/issues/117
   - oraclejdk8
   - openjdk10
+  - openjdk11
 
 env:
   matrix:
