--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 import java.text.SimpleDateFormat
 
 plugins {
-  id 'com.gradle.build-scan' version '1.9'
+  id 'com.gradle.build-scan' version '1.16'
   id "base"
   id "org.asciidoctor.convert" version "1.5.6"
   id "jacoco"
@@ -22,8 +22,8 @@ ext {
     groovyDependency = ["org.codehaus.groovy:groovy-all:${groovyVersion}"]
     groovyConsoleExtraDependency = []  //bundled in groovy-all
   } else if (variant == 2.5) {
-    groovyVersion = "2.5.2"
-    minGroovyVersion = "2.5.0"
+    groovyVersion = "2.5.3-SNAPSHOT"
+    minGroovyVersion = "2.5.2"
     groovyDependency = [
       "org.codehaus.groovy:groovy:${groovyVersion}",
       "org.codehaus.groovy:groovy-json:${groovyVersion}",
@@ -46,7 +46,7 @@ ext {
   }
   fullVersion = baseVersion + ((!snapshotVersion && releaseCandidate) ? "-RC$releaseCandidate" : "") + "-groovy-$variant" + (snapshotVersion ? "-SNAPSHOT" : '')
   variantLessVersion = baseVersion + (snapshotVersion ? "-SNAPSHOT" : (releaseCandidate ? "-RC$releaseCandidate" : ""))
-  javaVersions = [1.7, 1.8, 9, 10] // ensure that latest version is actually build on travis, otherwise no docs get published
+  javaVersions = [1.7, 1.8, 9, 10, 11] // ensure that latest version is actually build on travis, otherwise no docs get published
   javaVersion = System.getProperty("java.specification.version") as BigDecimal
 
   if (javaVersion >= 9) {
@@ -56,9 +56,9 @@ ext {
   libs = [
     jetbrainsAnnotations: "org.jetbrains:annotations:13.0",
     ant: "org.apache.ant:ant:1.9.7",
-    asm: "org.ow2.asm:asm:6.2",
-    bytebuddy: "net.bytebuddy:byte-buddy:1.8.21",
-    cglib: "cglib:cglib-nodep:3.2.7",
+    asm: "org.ow2.asm:asm:6.2.1",
+    bytebuddy: "net.bytebuddy:byte-buddy:1.8.22",
+    cglib: "cglib:cglib-nodep:3.2.8",
     groovy: groovyDependency,
     h2database: "com.h2database:h2:1.3.176",
     junit: "junit:junit:4.12",
@@ -133,6 +133,7 @@ subprojects {
   repositories {
     mavenCentral()
     maven { url "https://oss.jfrog.org/oss-snapshot-local/" }
+    maven { url "https://oss.jfrog.org/artifactory/oss-snapshot-local" }
   }
 
   configurations {
