--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ ext {
     jetbrainsAnnotations: "org.jetbrains:annotations:13.0",
     ant: "org.apache.ant:ant:1.9.7",
     asm: "org.ow2.asm:asm:6.2",
-    bytebuddy: "net.bytebuddy:byte-buddy:1.8.3",
+    bytebuddy: "net.bytebuddy:byte-buddy:1.8.21",
     cglib: "cglib:cglib-nodep:3.2.7",
     groovy: groovyDependency,
     h2database: "com.h2database:h2:1.3.176",
@@ -203,6 +203,10 @@ subprojects {
     //Required for building on Travis' container-based infrastructure to not be killed with
     //'exit code 137' - https://github.com/travis-ci/travis-ci/issues/5582
     jvmArgs '-Xmx512m'
+  }
+
+  jacoco {
+    toolVersion = '0.8.2'
   }
 }
 
