Add :spock-specs:mock-integration subproject
The new project contains integration tests for using Spock to mock Java
interfaces/classes with cglib/byte-buddy and objenesis, and without any
of them.

The old testCglib task that reran all tests with byte-buddy
deactivated was removed except for spock-spring which contains a few
tests that only run when cglib is being used.

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 include "spock-bom"
 include "spock-core"
 include "spock-specs"
+include "spock-specs:mock-integration"
 include "spock-spring"
 include "spock-spring:spring2-test"
 include "spock-spring:spring3-test"
