--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ description = "Spock Framework"
 
 ext {
   baseVersion = "1.2"
-  snapshotVersion = true
-  releaseCandidate = 0
+  snapshotVersion = false
+  releaseCandidate = 3
   variants = [2.4, 2.5]
   variant = System.getProperty("variant") as BigDecimal ?: variants.first()
   if (variant == 2.4) {
@@ -23,7 +23,7 @@ ext {
     groovyConsoleExtraDependency = []  //bundled in groovy-all
   } else if (variant == 2.5) {
     groovyVersion = "2.5.2"
-    minGroovyVersion = "2.5.2"
+    minGroovyVersion = "2.5.0"
     groovyDependency = [
       "org.codehaus.groovy:groovy:${groovyVersion}",
       "org.codehaus.groovy:groovy-json:${groovyVersion}",
