--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,8 @@ plugins {
 description = "Spock Framework"
 
 ext {
-  baseVersion = "1.2"
-  snapshotVersion = false
+  baseVersion = "1.3"
+  snapshotVersion = true
   releaseCandidate = 0
   variants = [2.4, 2.5]
   variant = System.getProperty("variant") as BigDecimal ?: variants.first()
