--- a/spock-core/core.gradle
+++ b/spock-core/core.gradle
@@ -20,6 +20,9 @@ dependencies {
   compile libs.bytebuddy, optional
   compile libs.cglib, optional
   compile libs.objenesis, optional
+  if (variant == 2.4) {
+    compileOnly project(':internal-backport')
+  }
 
   coreConsoleRuntime groovyConsoleExtraDependency
 }
