--- a/gradle/publishMaven.gradle
+++ b/gradle/publishMaven.gradle
@@ -1,4 +1,4 @@
-apply plugin: "maven-publish"
+apply plugin: "de.marcphilipp.nexus-publish"
 apply plugin: "signing"
 
 def optionalDeps = []
@@ -61,17 +61,11 @@ publishing {
       }
     }
   }
-  repositories {
-    maven {
-      def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
-      def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
-      url = snapshotVersion ? snapshotsRepoUrl : releasesRepoUrl
-      credentials {
-        username = "pniederw"
-        password = System.getenv("SONATYPE_OSS_PASSWORD")
-      }
-    }
-  }
+}
+
+nexusPublishing {
+  username = "pniederw"
+  password = System.getenv("SONATYPE_OSS_PASSWORD")
 }
 
 // ensure all checks pass before publishing
