Spock 2.0 Kickoff - Cleanup
Co-authored-by: Marc Philipp <mail@marcphilipp.de>

--- a/.gitignore
+++ b/.gitignore
@@ -9,15 +9,7 @@ build/
 target/
 
 # IDEA
-.idea/libraries
-.idea/scopes
-.idea/.name
-.idea/compiler.xml
-.idea/encodings.xml
-.idea/gradle.xml
-.idea/misc.xml
-.idea/modules.xml
-.idea/workspace.xml
+.idea/
 *.iml
 *.ipr
 *.iws
