--- a/build.gradle
+++ b/build.gradle
@@ -14,14 +14,9 @@ ext {
   baseVersion = "1.3"
   snapshotVersion = true
   releaseCandidate = 0
-  variants = [2.4, 2.5]
+  variants = [2.5]
   variant = System.getProperty("variant") as BigDecimal ?: variants.first()
-  if (variant == 2.4) {
-    groovyVersion = "2.4.15"
-    minGroovyVersion = "2.4.0"
-    groovyDependency = ["org.codehaus.groovy:groovy-all:${groovyVersion}"]
-    groovyConsoleExtraDependency = []  //bundled in groovy-all
-  } else if (variant == 2.5) {
+  if (variant == 2.5) {
     groovyVersion = "2.5.4"
     minGroovyVersion = "2.5.0"
     groovyDependency = [
@@ -46,7 +41,7 @@ ext {
   }
   fullVersion = baseVersion + ((!snapshotVersion && releaseCandidate) ? "-RC$releaseCandidate" : "") + "-groovy-$variant" + (snapshotVersion ? "-SNAPSHOT" : '')
   variantLessVersion = baseVersion + (snapshotVersion ? "-SNAPSHOT" : (releaseCandidate ? "-RC$releaseCandidate" : ""))
-  javaVersions = [1.7, 1.8, 9, 10, 11] // ensure that latest version is actually build on travis, otherwise no docs get published
+  javaVersions = [1.8, 9, 10, 11] // ensure that latest version is actually build on travis, otherwise no docs get published
   javaVersion = System.getProperty("java.specification.version") as BigDecimal
 
   if (javaVersion >= 9) {
