--- a/build.gradle
+++ b/build.gradle
@@ -59,9 +59,10 @@ ext {
     h2database: "com.h2database:h2:1.3.176",
     junit4: "junit:junit:4.12",
 //    junitPlatform: "org.junit.platform:junit-platform-engine:1.3.2",
-    jupiter: "com.github.junit-team.junit5:junit-jupiter:7bc6ecb86d",
-    junitPlatform: "com.github.junit-team.junit5:junit-platform-engine:7bc6ecb86d",
-    junitPlatformTestkit: "com.github.junit-team.junit5:junit-platform-testkit:7bc6ecb86d",
+    jupiter: "com.github.leonard84.junit5:junit-jupiter:d1f526dea7",
+    junitPlatform: "com.github.leonard84.junit5:junit-platform-engine:d1f526dea7",
+    junitPlatformTestkit: "com.github.leonard84.junit5:junit-platform-testkit:d1f526dea7",
+    junitPlatformConsole: "com.github.leonard84.junit5:junit-platform-console:d1f526dea7",
     log4j: "log4j:log4j:1.2.17",
     objenesis: "org.objenesis:objenesis:3.0.1"
   ]
@@ -134,7 +135,8 @@ subprojects {
     maven {
       url 'https://jitpack.io'
       content {
-        includeGroup "com.github.junit-team.junit5"
+//        includeGroup "com.github.junit-team.junit5"
+        includeGroup "com.github.leonard84.junit5"
       }
     }
   }
