--- a/build.gradle
+++ b/build.gradle
@@ -53,8 +53,8 @@ ext {
   libs = [
     jetbrainsAnnotations: "org.jetbrains:annotations:13.0",
     ant: "org.apache.ant:ant:1.10.5",
-    asm: "org.ow2.asm:asm:7.0",
-    bytebuddy: "net.bytebuddy:byte-buddy:1.9.10",
+    asm: "org.ow2.asm:asm:7.1",
+    bytebuddy: "net.bytebuddy:byte-buddy:1.9.11",
     cglib: "cglib:cglib-nodep:3.2.10",
     groovy: groovyDependency,
     h2database: "com.h2database:h2:1.3.176",
@@ -380,4 +380,8 @@ def configureGroovydoc(task) {
 buildScan {
   termsOfServiceUrl = 'https://gradle.com/terms-of-service'
   termsOfServiceAgree = 'yes'
+}
+
+subprojects {
+    task allDependencyInsight(type: DependencyInsightReportTask) {}
 }
