--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,12 @@ ext {
   variants = [2.4, 2.5]
   variant = System.getProperty("variant") as BigDecimal ?: variants.first()
   if (variant == 2.4) {
-    groovyVersion = "2.4.15"
+    groovyVersion = "2.4.16"
     minGroovyVersion = "2.4.0"
     groovyDependency = ["org.codehaus.groovy:groovy-all:${groovyVersion}"]
     groovyConsoleExtraDependency = []  //bundled in groovy-all
   } else if (variant == 2.5) {
-    groovyVersion = "2.5.4"
+    groovyVersion = "2.5.6"
     minGroovyVersion = "2.5.0"
     groovyDependency = [
       "org.codehaus.groovy:groovy:${groovyVersion}",
@@ -56,8 +56,8 @@ ext {
   libs = [
     jetbrainsAnnotations: "org.jetbrains:annotations:13.0",
     ant: "org.apache.ant:ant:1.9.7",
-    asm: "org.ow2.asm:asm:7.0",
-    bytebuddy: "net.bytebuddy:byte-buddy:1.9.3",
+    asm: "org.ow2.asm:asm:7.1",
+    bytebuddy: "net.bytebuddy:byte-buddy:1.9.11",
     cglib: "cglib:cglib-nodep:3.2.9",
     groovy: groovyDependency,
     h2database: "com.h2database:h2:1.3.176",
@@ -375,4 +375,8 @@ def configureGroovydoc(task) {
 buildScan {
   licenseAgreementUrl = 'https://gradle.com/terms-of-service'
   licenseAgree = 'yes'
+}
+
+subprojects {
+    task allDepInsight(type: DependencyInsightReportTask) << {}
 }
