Force Groovy compiler to obey javaVersions.min()
From the Gradle documentation: "The Groovy compiler will always be
executed with the same version of Java that was used to start Gradle."
For Groovy 2.4 variant classes are generated in Java 1.5 compatibility
mode anyway.

--- a/build.gradle
+++ b/build.gradle
@@ -90,6 +90,12 @@ allprojects {
       options.compilerArgs += ['--release', '8']
       options.encoding = 'UTF-8'
     }
+    tasks.withType(GroovyCompile) {
+      sourceCompatibility = javaVersions.min()
+      targetCompatibility = javaVersions.min()
+      options.compilerArgs += ['--release', '8']
+      options.encoding = 'UTF-8'
+    }
 
     tasks.withType(Javadoc) {
       options.addStringOption('Xdoclint:none', '-quiet')
