--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ ext {
   }
   fullVersion = baseVersion + ((!snapshotVersion && releaseCandidate) ? "-RC$releaseCandidate" : "") + "-groovy-$variant" + (snapshotVersion ? "-SNAPSHOT" : '')
   variantLessVersion = baseVersion + (snapshotVersion ? "-SNAPSHOT" : (releaseCandidate ? "-RC$releaseCandidate" : ""))
-  javaVersions = [1.7, 1.8, 9, 10, 11] // ensure that latest version is actually build on travis, otherwise no docs get published
+  javaVersions = [1.7, 1.8, 9, 10, 11, 12] // ensure that latest version is actually build on travis, otherwise no docs get published
   javaVersion = System.getProperty("java.specification.version") as BigDecimal
 
   if (javaVersion >= 9) {
