--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ ext {
   }
   fullVersion = baseVersion + ((!snapshotVersion && releaseCandidate) ? "-RC$releaseCandidate" : "") + "-groovy-$variant" + (snapshotVersion ? "-SNAPSHOT" : '')
   variantLessVersion = baseVersion + (snapshotVersion ? "-SNAPSHOT" : (releaseCandidate ? "-RC$releaseCandidate" : ""))
-  javaVersions = [1.8, 9, 10, 11] // ensure that latest version is actually build on travis, otherwise no docs get published
+  javaVersions = [1.8, 9, 10, 11, 12] // ensure that latest version is actually build on travis, otherwise no docs get published
   javaVersion = System.getProperty("java.specification.version") as BigDecimal
 
   if (javaVersion >= 9) {
@@ -56,8 +56,8 @@ ext {
   libs = [
     jetbrainsAnnotations: "org.jetbrains:annotations:13.0",
     ant: "org.apache.ant:ant:1.9.7",
-    asm: "org.ow2.asm:asm:7.0",
-    bytebuddy: "net.bytebuddy:byte-buddy:1.9.3",
+    asm: "org.ow2.asm:asm:7.1",
+    bytebuddy: "net.bytebuddy:byte-buddy:1.9.12",
     cglib: "cglib:cglib-nodep:3.2.9",
     groovy: groovyDependency,
     h2database: "com.h2database:h2:1.3.176",
@@ -171,7 +171,7 @@ subprojects {
   }
 
   jacoco {
-    toolVersion = '0.8.2'
+    toolVersion = '0.8.4'
   }
 }
 
