--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 import java.text.SimpleDateFormat
 
 plugins {
-  id 'com.gradle.build-scan' version '1.16'
+  id 'com.gradle.build-scan' version '2.3'
   id "base"
   id "org.asciidoctor.convert" version "1.5.7"
   id "jacoco"
@@ -373,6 +373,6 @@ def configureGroovydoc(task) {
 }
 
 buildScan {
-  licenseAgreementUrl = 'https://gradle.com/terms-of-service'
-  licenseAgree = 'yes'
+  termsOfServiceUrl = 'https://gradle.com/terms-of-service'
+  termsOfServiceAgree = 'yes'
 }
