--- a/gradle/publishMaven.gradle
+++ b/gradle/publishMaven.gradle
@@ -69,8 +69,12 @@ publishing {
 }
 
 nexusPublishing {
-  username = "pniederw"
-  password = System.getenv("SONATYPE_OSS_PASSWORD")
+  repositories {
+    sonatype {
+      username = "pniederw"
+      password = System.getenv("SONATYPE_OSS_PASSWORD")
+    }
+  }
 }
 
 // ensure all checks pass before publishing
