--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ description = "Spock Framework"
 ext {
   baseVersion = "2.0"
   snapshotVersion = true
-  releaseCandidate = 0
+  milestone = 0
   variants = [2.5]
   variant = System.getProperty("variant") as BigDecimal ?: variants.first()
   if (variant == 2.5) {
@@ -41,8 +41,8 @@ ext {
   if (System.getProperty("groovyVersion")) {
     groovyVersion = System.getProperty("groovyVersion")
   }
-  fullVersion = baseVersion + ((!snapshotVersion && releaseCandidate) ? "-RC$releaseCandidate" : "") + "-groovy-$variant" + (snapshotVersion ? "-SNAPSHOT" : '')
-  variantLessVersion = baseVersion + (snapshotVersion ? "-SNAPSHOT" : (releaseCandidate ? "-RC$releaseCandidate" : ""))
+  fullVersion = baseVersion + ((!snapshotVersion && milestone) ? "-M$milestone" : "") + "-groovy-$variant" + (snapshotVersion ? "-SNAPSHOT" : '')
+  variantLessVersion = baseVersion + (snapshotVersion ? "-SNAPSHOT" : (milestone ? "-M$milestone" : ""))
   javaVersions = [1.8, 9, 10, 11, 12] // ensure that latest version is actually build on travis, otherwise no docs get published
   javaVersion = System.getProperty("java.specification.version") as BigDecimal
 
