--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,8 @@ description = "Spock Framework"
 
 ext {
   baseVersion = "2.0"
-  snapshotVersion = false
-  milestone = 1
+  snapshotVersion = true
+  milestone = 0
   variants = [2.5]
   variant = System.getProperty("variant") as BigDecimal ?: variants.first()
   if (variant == 2.5) {
