--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,8 @@ jdk:
 
 env:
   matrix:
-    - VARIANT=2.5
+    # Variant 2.5 is broken due to incompatible changes in Groovy 3 API
+    - VARIANT=3.0
   global:
     # SIGNING_PASSWORD
     - secure: "GBvPdDAaMfr0iAYHzVxhMIBVHFanEPY+69CbEFijbZjhv8h0FPvuLos2p1K5/hbmNkQ1Hd2+CHsm3ErvXQHXtpXn0HmKvzSP7pnPk83iRNVGPieasvfnKiSohZeEplkAK6kbK8sZbjJRUFqUZtwyPtWfs244rCOo++D3KtfggzQ="
