--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,22 @@
+pluginManagement {
+  plugins {
+    id 'com.gradle.enterprise' version '3.1.1'
+    id "org.asciidoctor.convert" version "2.4.0"
+    id "net.nemerosa.versioning" version "2.10.0"
+    id "de.marcphilipp.nexus-publish" version "0.4.0"
+  }
+}
+
+plugins {
+  id 'com.gradle.enterprise'
+}
+
+gradleEnterprise {
+  buildScan {
+    termsOfServiceUrl = "https://gradle.com/terms-of-service"
+    termsOfServiceAgree = "yes"
+  }
+}
 include "spock-bom"
 include "spock-core"
 include "spock-specs"
