[Groovy3] Make codebase Groovy 2 and 3 compilable
Added compatibility layer and conditional module inclusion to
keep codebase compilable (and buildable) with both Groovy 2.5 and 3.0.

--- a/groovy2-compat/groovy2-compat.gradle
+++ b/groovy2-compat/groovy2-compat.gradle
@@ -1,3 +1,7 @@
 //Module with compatibility layer to keep codebase compilable with both Groovy 2.5 and 3.0
-//
-//WARNING. Do not mix groovy-3 and spock-2.x-groovy-2.5 jars on classpath!
+
+if (variant == 2.5) {
+  dependencies {
+    compile project(':internal-backport')
+  }
+}
