--- a/settings.gradle
+++ b/settings.gradle
@@ -8,6 +8,12 @@ include "spock-guice"
 include "spock-junit4"
 include "spock-temp"
 include "spock-testkit"
+//Remove once Groovy 2.5 support is dropped
+include "groovy2-compat"
+
+if ((System.getProperty("variant") as BigDecimal ?: 3.0) != 3.0) {
+  include "internal-backport"
+}
 
 // https://issues.apache.org/jira/projects/TAP5/issues/TAP5-2588
 if (JavaVersion.current().isJava8()) {
