--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,10 @@ ext {
   milestone = 0
   variants = [3.0, 2.5]
   variant = System.getProperty("variant") as BigDecimal ?: variants.first()
-  //TODO: Another variant just for test purpose - it's problematic to keep Groovy 2.5 and 3.0 source compatibility due to changes in API
   if (variant == 3.0) {
     groovyVersion = "3.0.0-rc-2"
     minGroovyVersion = "3.0.0"
+    maxGroovyVersion = "3.9.99"
     groovyDependency = [
       "org.codehaus.groovy:groovy:${groovyVersion}",
       "org.codehaus.groovy:groovy-json:${groovyVersion}",
@@ -38,6 +38,7 @@ ext {
   } else if (variant == 2.5) {
     groovyVersion = "2.5.8"
     minGroovyVersion = "2.5.0"
+    maxGroovyVersion = "2.9.99"
     groovyDependency = [
       "org.codehaus.groovy:groovy:${groovyVersion}",
       "org.codehaus.groovy:groovy-json:${groovyVersion}",
@@ -54,8 +55,7 @@ ext {
   } else {
     throw new InvalidUserDataException("Unknown variant: $variant. Choose one of: $variants")
   }
-  //TODO
-  maxGroovyVersion = snapshotVersion ? "3.9.99" : "2.9.99" // TODO lock these down once Groovy 3 gets close to RC stage
+  maxGroovyVersion = snapshotVersion ? "3.9.99" : maxGroovyVersion
   if (System.getProperty("groovyVersion")) {
     groovyVersion = System.getProperty("groovyVersion")
   }
