--- a/spock-core/core.gradle
+++ b/spock-core/core.gradle
@@ -22,9 +22,8 @@ dependencies {
   compile libs.bytebuddy, optional
   compile libs.cglib, optional
   compile libs.objenesis, optional
-  if (variant == 2.4) {
-    compileOnly project(':internal-backport')
-  }
+
+  compile project(':groovy2-compat')
 
   coreConsoleRuntime groovyConsoleExtraDependency
 }
