--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ ext {
   snapshotVersion = true
   milestone = 0
   variants = [2.5, 3.0]
-  variant = System.getProperty("variant") as BigDecimal ?: variants.last()
+  variant = System.getProperty("variant") as BigDecimal ?: variants.first()
   if (variant == 2.5) {
       groovyVersion = "2.5.8"
       minGroovyVersion = "2.5.0"
