--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ ext {
       minGroovyVersion = "2.5.0"
       maxGroovyVersion = "2.9.99"
     } else if (variant == 3.0) {
-      groovyVersion = "3.0.0-rc-3"
+      groovyVersion = "3.0.0"
       minGroovyVersion = "3.0.0"
       maxGroovyVersion = "3.9.99"
     } else {
