--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ cache:
     - $HOME/.gradle/wrapper/
 
 dist: precise # downgrade to avoid jdk7 SSL Bug https://github.com/docker-library/openjdk/issues/117
-jdk:
+jdk: # if you modify these also modify the `javaVersions` list in build.gradle
   - oraclejdk8
   - openjdk11
 
