Reduce number of Groovy dependencies to just groovy.jar
Spock shouldn't provide the other to do not pollute the classpath.
It's common practice nowadays to exclude transitive dependencies,
which is not good as "spock-groovy2-compat" is needed with Groovy 2.

--- a/spock-spring/spring.gradle
+++ b/spock-spring/spring.gradle
@@ -22,6 +22,8 @@ dependencies {
   testCompile "org.springframework:spring-jdbc:$springVersion"
   testCompile "org.springframework:spring-tx:$springVersion"
   testCompile "javax.inject:javax.inject:1"
+  // for groovy.sql.Sql
+  testCompile groovyTestDependencies
 
   testRuntime libs.h2database
   testRuntime libs.log4j
