--- a/build.gradle
+++ b/build.gradle
@@ -30,17 +30,14 @@ ext {
     throw new InvalidUserDataException("Unknown variant: $variant. Choose one of: $variants")
   }
 
-  groovyDependency = [
+  groovyDependencies = [
     "org.codehaus.groovy:groovy:${groovyVersion}",
-    "org.codehaus.groovy:groovy-json:${groovyVersion}",
-    "org.codehaus.groovy:groovy-nio:${groovyVersion}",
-    "org.codehaus.groovy:groovy-macro:${groovyVersion}",
-    "org.codehaus.groovy:groovy-templates:${groovyVersion}",
-    "org.codehaus.groovy:groovy-test:${groovyVersion}",
-    "org.codehaus.groovy:groovy-sql:${groovyVersion}",
-    "org.codehaus.groovy:groovy-xml:${groovyVersion}",
   ]
-  groovyConsoleExtraDependency = [
+  groovyTestDependencies = [
+    "org.codehaus.groovy:groovy-test:${groovyVersion}", //for @NotYetImplemented
+    "org.codehaus.groovy:groovy-sql:${groovyVersion}",  //for some Spring and Unitils tests
+  ]
+  groovyConsoleExtraDependencies = [
     "org.codehaus.groovy:groovy-console:${groovyVersion}"
   ]
   maxGroovyVersion = snapshotVersion ? "3.9.99" : maxGroovyVersion
@@ -53,7 +50,7 @@ ext {
   javaVersion = System.getProperty("java.specification.version") as BigDecimal
 
   if (javaVersion >= 9) {
-    groovyDependency += ["javax.xml.bind:jaxb-api:2.3.0"]
+    groovyDependencies += ["javax.xml.bind:jaxb-api:2.3.0"]
   }
 
   libs = [
@@ -62,7 +59,7 @@ ext {
     asm: "org.ow2.asm:asm:7.1",
     bytebuddy: "net.bytebuddy:byte-buddy:1.9.11",
     cglib: "cglib:cglib-nodep:3.2.10",
-    groovy: groovyDependency,
+    groovy: groovyDependencies,
     h2database: "com.h2database:h2:1.3.176",
     junit4: "junit:junit:4.12",
     junitBom: "org.junit:junit-bom:5.5.2",
