--- a/spock-specs/specs.gradle
+++ b/spock-specs/specs.gradle
@@ -11,6 +11,8 @@ configurations {
 dependencies {
   testCompile project(":spock-core")
   testCompile project(":spock-junit4")
+  // for groovy.sql.Sql and groovy.transform.NotYetImplemented
+  testCompile groovyTestDependencies
 
   testRuntime libs.asm
   testRuntime libs.bytebuddy
