--- a/build.gradle
+++ b/build.gradle
@@ -47,11 +47,7 @@ ext {
   fullVersion = baseVersion + ((!snapshotVersion && milestone) ? "-M$milestone" : "") + "-groovy-$variant" + (snapshotVersion ? "-SNAPSHOT" : '')
   variantLessVersion = baseVersion + (snapshotVersion ? "-SNAPSHOT" : (milestone ? "-M$milestone" : ""))
   javaVersions = [1.8, 11] // ensure that latest version is actually build on travis, otherwise no docs get published
-  javaVersion = System.getProperty("java.specification.version") as BigDecimal
-
-  if (javaVersion >= 9) {
-    groovyDependencies += ["javax.xml.bind:jaxb-api:2.3.0"]
-  }
+  ext.javaVersion = System.getProperty("java.specification.version") as BigDecimal
 
   libs = [
     jetbrainsAnnotations: "org.jetbrains:annotations:13.0",
